# MeloCafe

./: .gitignore  BUILD-STATUS.md  CMakeLists.txt  COMPLETE-FINAL.md  COMPLETE.md  DONE.md  FINAL-COMPLETE.md  FINAL-README.md  FINAL-REPORT-COMPLETE.md  FINAL-REPORT-v2.md  FINAL-REPORT.md  FINAL-SESSION-COMPLETE-v2.md  FINAL-SESSION-COMPLETE.md  FINAL-SESSION-README.md  FINAL-SESSION-REPORT.md  FINAL-SESSION-SUMMARY.md  FINAL-SESSION.md  FINAL-SUMMARY-COMPLETE.md  FINAL-SUMMARY-v2.md  FINAL-SUMMARY.md  FINAL.md  FIXES-APPLIED.md  FIXES.md  KNOWN-ISSUES.md  PHASE1-COMPLETE.md  PHASE2-BUILD-TESTING.md  PHASE2-COMPLETE.md  PRE-FIX-BUILD-ERRORS.md  PROGRESS.md  PROJECT-SUMMARY.md  QUICKSTART.md  README-FINAL.md  README-IOS.md  README-SESSION-COMPLETE.md  README-SESSION-FINAL.md  README-SESSION.md  README-STATUS.md  README.md  SESSION-COMPLETE-FINAL-FINAL.md  SESSION-COMPLETE-FINAL-v2.md  (+25 more)
.github/: WORKFLOW-TEST.md  ios-build-toolchain.cmake
.github/workflows/: build-ios.yml  build-unsigned-ipa.yml  debug-cmake.yml  test-ios-cmake.yml
docs/: Game-Testing-Checklist.md  LiveContainer-Guide.md  MacOS-Build-Guide.md  OpenGL-Es-Compatibility.md  shader-es3-compatibility.md
memory/: 2026-05-22.md
src/: CMakeLists.txt  main.cpp
src/Cafe/HW/Latte/Renderer/OpenGL/: CachedFBOGL.h  LatteTextureGL.cpp  LatteTextureGL.h  LatteTextureViewGL.cpp  LatteTextureViewGL.h  OpenGLCompat.h  OpenGLQuery.cpp  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLRendererCore.cpp  OpenGLRendererStreamout.cpp  OpenGLRendererUniformData.cpp  OpenGLShim.h  OpenGLSurfaceCopy.cpp  OpenGLTextureReadback.h  RendererShaderGL.cpp  RendererShaderGL.h  TextureReadbackGL.cpp
src/gui/: CMakeLists.txt
src/gui/iosgui/: CMakeLists.txt  IOSGui.cpp  IOSGui.h  README.md  WindowSystem.h
src/ios/: CMakeLists.txt  CafeIOS.cpp  CafeIOS.h  iOSApp.cpp  iOSApp.h  iOSMain.cpp  iOSMain.h
